tests/transpiler/x/zig/cross_join_triple.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/cross_join_triple.zig:23:9: error: local variable is never mutated
    var tmp = arr.toOwnedSlice() catch unreachable;
        ^~~
/workspace/mochi/tests/transpiler/x/zig/cross_join_triple.zig:23:9: note: consider using 'const'
/workspace/mochi/tests/transpiler/x/zig/cross_join_triple.zig:26:15: error: root source file struct 'Io' has no member named 'getStdOut'
    try std.io.getStdOut().writer().print("{s}\n", .{"--- Cross Join of three lists ---"});
        ~~~~~~^~~~~~~~~~
/tmp/zig/lib/std/Io.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
