tests/transpiler/x/zig/cross_join_triple.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:23 +0000
const std = @import("std");

const Entry = struct {
    n: i64,
    l: []const u8,
    b: bool,
};

pub fn main() void {
    const nums = [_]i64{1, 2};
    const letters = [_][]const u8{"A", "B"};
    const bools = [_]bool{true, false};
    const combos: []Entry = blk: {
    var arr = std.ArrayList(Entry).init(std.heap.page_allocator);
    for (nums) |n| {
        for (letters) |l| {
            for (bools) |b| {
                arr.append(.{ .n = n, .l = l, .b = b }) catch unreachable;
            }
        }
    }
    var tmp = arr.toOwnedSlice() catch unreachable;
    break :blk tmp;
};
    try std.io.getStdOut().writer().print("{s}\n", .{"--- Cross Join of three lists ---"});
    for (combos) |c| {
        try std.io.getStdOut().writer().print("{any} {any} {any}\n", .{c.n, c.l, c.b});
    }
}
